[gd_scene load_steps=19 format=2]

[ext_resource path="res://main/ui/theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://main/ui/theme/style_box/Clear.tres" type="StyleBox" id=2]
[ext_resource path="res://main/ui/utility_classes/input_container/hotkey_container/hotkey_container.gd" type="Script" id=3]
[ext_resource path="res://main/ui/utility_classes/visible_resize_container/visible_resize_container.gd" type="Script" id=4]
[ext_resource path="res://main/ui/utility_classes/unclickable_scoll_container/unclickable_scroll_container.gd" type="Script" id=5]
[ext_resource path="res://main/ui/menu/game_menu/game_menu.gd" type="Script" id=6]
[ext_resource path="res://main/ui/utility_classes/input_container/button_container/text_button_container/text_button_container.gd" type="Script" id=7]
[ext_resource path="res://main/ui/menu/game_menu/party_button_container/party_button_container.gd" type="Script" id=8]
[ext_resource path="res://main/ui/theme/font/SecondaryFont.tres" type="DynamicFont" id=9]
[ext_resource path="res://main/ui/utility_classes/effect_handler/EffectHandler.tscn" type="PackedScene" id=10]
[ext_resource path="res://main/ui/menu/game_menu/party_skill_container/party_skill_container.gd" type="Script" id=11]
[ext_resource path="res://main/ui/menu/game_menu/press_turn_container/PressTurnContainer.tscn" type="PackedScene" id=12]
[ext_resource path="res://main/ui/menu/game_menu/creature_button_panel/CreatureButtonPanel.tscn" type="PackedScene" id=13]
[ext_resource path="res://main/ui/menu/game_menu/party_skill_container/skill_button_container/SkillButtonContainer.tscn" type="PackedScene" id=14]
[ext_resource path="res://main/ui/menu/game_menu/selector/selector.gd" type="Script" id=15]
[ext_resource path="res://main/ui/theme/style_box/regular/margin/MarginRegular.tres" type="StyleBox" id=16]
[ext_resource path="res://main/ui/menu/game_menu/label_container/label_container.gd" type="Script" id=17]
[ext_resource path="res://main/ui/theme/style_box/thin/margin/MarginThin.tres" type="StyleBox" id=18]

[node name="GameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
pop_out_party = NodePath("VBoxContainer/PopOutPartyContainer")
effect_handler = NodePath("EffectHandler")
action_selection = NodePath("VBoxContainer/ActionSelection")
press_turn_container = NodePath("VBoxContainer/PressTurnContainer")
selector = NodePath("Selector")
label_container = NodePath("LabelLayer/LabelContainer")
text_label = NodePath("VBoxContainer/MainPanel/PanelContainer/VBoxContainer/Text")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -312.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 8
custom_constants/separation = 5
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionSelection" type="PanelContainer" parent="VBoxContainer"]
margin_left = 183.0
margin_right = 433.0
margin_bottom = 53.0
grow_vertical = 0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 8
custom_styles/panel = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ActionSelection"]
margin_left = 3.0
margin_top = 3.0
margin_right = 247.0
margin_bottom = 50.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 1

[node name="SelectionLabel" type="Label" parent="VBoxContainer/ActionSelection/VBoxContainer"]
margin_right = 244.0
margin_bottom = 14.0
text = "Skills"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ActionSelection/VBoxContainer"]
margin_top = 15.0
margin_right = 244.0
margin_bottom = 47.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 6

[node name="PartySkillContainer" type="TabContainer" parent="VBoxContainer/ActionSelection/VBoxContainer/HBoxContainer"]
margin_right = 230.0
margin_bottom = 32.0
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 16 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
controller = NodePath("../../../../..")
skill_button_container = ExtResource( 14 )

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/ActionSelection/VBoxContainer/HBoxContainer"]
margin_left = 236.0
margin_right = 244.0
margin_bottom = 32.0
mouse_filter = 2
custom_styles/panel = ExtResource( 16 )

[node name="ActionHotkeyContainer" type="VBoxContainer" parent="VBoxContainer/ActionSelection/VBoxContainer/HBoxContainer/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 28.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
controller = NodePath("../../../../../..")
hotkey_font = ExtResource( 9 )
hotkey_color = Color( 1, 1, 1, 1 )
hotkeys = {
"Check": "ui_accept2",
"Use": "ui_accept"
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ActionSelection/VBoxContainer/HBoxContainer/PanelContainer/ActionHotkeyContainer"]
mouse_filter = 2

[node name="PressTurnContainer" parent="VBoxContainer" instance=ExtResource( 12 )]
visible = false
margin_top = 197.0
margin_bottom = 225.0
size_flags_vertical = 8

[node name="MainPanel" type="MarginContainer" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 616.0
margin_bottom = 98.0
mouse_filter = 2
size_flags_vertical = 8
custom_constants/margin_right = 4
custom_constants/margin_left = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/MainPanel"]
margin_left = 4.0
margin_right = 612.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 8
custom_styles/panel = ExtResource( 16 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainPanel/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 604.0
margin_bottom = 36.0
mouse_filter = 2

[node name="MainButtonContainer" type="HBoxContainer" parent="VBoxContainer/MainPanel/PanelContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 14.0
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
controller = NodePath("../../../../..")
button_names = [ "Effects", "Skills", "Items", "Party", "Settings" ]

[node name="Skills" type="Button" parent="VBoxContainer/MainPanel/PanelContainer/VBoxContainer/MainButtonContainer"]
margin_right = 116.0
margin_bottom = 14.0
mouse_filter = 2
size_flags_horizontal = 3
text = "Skills"

[node name="Skills2" type="Button" parent="VBoxContainer/MainPanel/PanelContainer/VBoxContainer/MainButtonContainer"]
margin_left = 120.0
margin_right = 237.0
margin_bottom = 14.0
mouse_filter = 2
size_flags_horizontal = 3
text = "Skills"

[node name="Party" type="Button" parent="VBoxContainer/MainPanel/PanelContainer/VBoxContainer/MainButtonContainer"]
margin_left = 241.0
margin_right = 358.0
margin_bottom = 14.0
mouse_filter = 2
size_flags_horizontal = 3
text = "Party"

[node name="Items" type="Button" parent="VBoxContainer/MainPanel/PanelContainer/VBoxContainer/MainButtonContainer"]
margin_left = 362.0
margin_right = 479.0
margin_bottom = 14.0
mouse_filter = 2
size_flags_horizontal = 3
text = "Items"

[node name="MainMenu" type="Button" parent="VBoxContainer/MainPanel/PanelContainer/VBoxContainer/MainButtonContainer"]
margin_left = 483.0
margin_right = 600.0
margin_bottom = 14.0
mouse_filter = 2
size_flags_horizontal = 3
text = "Main Menu"

[node name="Text" type="Label" parent="VBoxContainer/MainPanel/PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 600.0
margin_bottom = 32.0

[node name="ActivePartyContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 103.0
margin_right = 616.0
margin_bottom = 168.0
rect_min_size = Vector2( 0, 65 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 8
custom_constants/separation = 0
script = ExtResource( 8 )
controller = NodePath("../..")
button_scene = ExtResource( 13 )

[node name="CreatureButtonPanel" parent="VBoxContainer/ActivePartyContainer" instance=ExtResource( 13 )]
margin_left = 16.0
margin_top = 3.0
margin_right = 137.0
margin_bottom = 65.0

[node name="CreatureButtonPanel2" parent="VBoxContainer/ActivePartyContainer" instance=ExtResource( 13 )]
margin_left = 170.0
margin_top = 3.0
margin_right = 291.0
margin_bottom = 65.0

[node name="CreatureButtonPanel3" parent="VBoxContainer/ActivePartyContainer" instance=ExtResource( 13 )]
margin_left = 324.0
margin_top = 3.0
margin_right = 445.0
margin_bottom = 65.0

[node name="CreatureButtonPanel4" parent="VBoxContainer/ActivePartyContainer" instance=ExtResource( 13 )]
margin_left = 478.0
margin_top = 3.0
margin_right = 599.0
margin_bottom = 65.0

[node name="PopOutPartyContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 173.0
margin_right = 616.0
margin_bottom = 294.0
rect_min_size = Vector2( 0, 121 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 8
custom_styles/panel = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PopOutPartyContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 613.0
margin_bottom = 102.0
rect_min_size = Vector2( 0, 99 )
mouse_filter = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="VBoxContainer/PopOutPartyContainer/VBoxContainer"]
margin_right = 610.0
margin_bottom = 14.0
text = "Party"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PopOutPartyContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 610.0
margin_bottom = 99.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PopOutPartyContainer/VBoxContainer/HBoxContainer"]
margin_right = 602.0
margin_bottom = 81.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_vertical_enabled = false
script = ExtResource( 5 )

[node name="FullPartyContainer" type="HBoxContainer" parent="VBoxContainer/PopOutPartyContainer/VBoxContainer/HBoxContainer/ScrollContainer"]
margin_right = 621.0
margin_bottom = 71.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 8 )
controller = NodePath("../../../../../..")
button_scene = ExtResource( 13 )
full_party = true

[node name="CreatureButtonPanel" parent="VBoxContainer/PopOutPartyContainer/VBoxContainer/HBoxContainer/ScrollContainer/FullPartyContainer" instance=ExtResource( 13 )]
margin_top = 9.0
margin_right = 121.0
margin_bottom = 71.0

[node name="CreatureButtonPanel2" parent="VBoxContainer/PopOutPartyContainer/VBoxContainer/HBoxContainer/ScrollContainer/FullPartyContainer" instance=ExtResource( 13 )]
margin_left = 125.0
margin_top = 9.0
margin_right = 246.0
margin_bottom = 71.0

[node name="CreatureButtonPanel3" parent="VBoxContainer/PopOutPartyContainer/VBoxContainer/HBoxContainer/ScrollContainer/FullPartyContainer" instance=ExtResource( 13 )]
margin_left = 250.0
margin_top = 9.0
margin_right = 371.0
margin_bottom = 71.0

[node name="CreatureButtonPanel4" parent="VBoxContainer/PopOutPartyContainer/VBoxContainer/HBoxContainer/ScrollContainer/FullPartyContainer" instance=ExtResource( 13 )]
margin_left = 375.0
margin_top = 9.0
margin_right = 496.0
margin_bottom = 71.0

[node name="CreatureButtonPanel5" parent="VBoxContainer/PopOutPartyContainer/VBoxContainer/HBoxContainer/ScrollContainer/FullPartyContainer" instance=ExtResource( 13 )]
margin_left = 500.0
margin_top = 9.0
margin_right = 621.0
margin_bottom = 71.0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PopOutPartyContainer/VBoxContainer/HBoxContainer"]
margin_left = 606.0
margin_right = 610.0
margin_bottom = 81.0
mouse_filter = 2
size_flags_horizontal = 9
size_flags_vertical = 3
custom_styles/panel = ExtResource( 18 )

[node name="PartySelectHotKeyContainer" type="VBoxContainer" parent="VBoxContainer/PopOutPartyContainer/VBoxContainer/HBoxContainer/PanelContainer"]
visible = false
margin_left = 2.0
margin_top = 2.0
margin_right = 112.0
margin_bottom = 63.0
rect_min_size = Vector2( 110, 0 )
mouse_filter = 2
size_flags_horizontal = 10
size_flags_vertical = 3
custom_constants/separation = 2
script = ExtResource( 3 )
controller = NodePath("../../../../../..")
hotkey_font = ExtResource( 9 )
hotkey_color = Color( 1, 1, 1, 1 )
hotkeys = {
"Back": "ui_cancel",
"Confirm": "ui_accept"
}

[node name="PartyHotKeyContainer" type="VBoxContainer" parent="VBoxContainer/PopOutPartyContainer/VBoxContainer/HBoxContainer/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 2.0
margin_bottom = 79.0
mouse_filter = 2
size_flags_horizontal = 10
size_flags_vertical = 3
custom_constants/separation = 2
script = ExtResource( 3 )
controller = NodePath("../../../../../..")
hotkey_font = ExtResource( 9 )
hotkey_color = Color( 1, 1, 1, 1 )
hotkeys = {
"Check": "ui_accept2",
"Delete": "ui_accept3",
"Summon": "ui_accept"
}

[node name="EffectHandler" parent="." instance=ExtResource( 10 )]
default_fade_time = 0.1

[node name="Selector" type="Node" parent="."]
script = ExtResource( 15 )
controller = NodePath("..")

[node name="LabelLayer" type="CanvasLayer" parent="."]
offset = Vector2( 0, 35 )
transform = Transform2D( 1, 0, 0, 1, 0, 35 )

[node name="LabelContainer" type="PanelContainer" parent="LabelLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.5
margin_top = -14.0
margin_right = 88.5
margin_bottom = 5.0
theme = ExtResource( 1 )
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}
effect_handler = NodePath("../../EffectHandler")

[node name="Label" type="Label" parent="LabelLayer/LabelContainer"]
margin_left = 23.0
margin_top = 2.0
margin_right = 153.0
margin_bottom = 16.0
size_flags_horizontal = 4
text = "Passsaaaaaaaaaaaaaaaaa"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="LabelLayer/LabelContainer"]
